--- a/.admin/build.properties
+++ b/.admin/build.properties
@@ -9,9 +9,9 @@ propel.database.url = mysql:host=localhost;dbname=%DB_NAME%
 propel.database.user = %DB_USER%
 propel.database.password = %DB_PASS%
 
-propel.behavior.goatcheese.class = behavior.GoatCheese.GoatCheese
+propel.behavior.goatcheese.class = behavior.GoatCheese.goatcheese.GoatCheese
 propel.behavior.add_validator.class = behavior.GoatCheese.Model.AddValidators
-propel.behavior.add_tablestamp.class = behavior.GoatCheese.vendor.TableStampBehavior
+propel.behavior.add_tablestamp.class = behavior.GoatCheese.goatcheese.vendor.TableStampBehavior
 
 propel.packageObjectModel = true
 
