added expenses and tax

--- a/.admin/composer.json
+++ b/.admin/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "apigoat/billboy",
+    "name": "apigoat/mbillboy",
     "type": "project",
     "description": "App",
     "autoload": {
