--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ gc
 .admin/config/Built/basedata.sql
 .admin/public/css/*.min.css
 .admin/public/js/*.min.js
-vendor/**
+vendor/*
+error.myproject1.log
