--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 .admin/.build/*
 .admin/tmp/.*
 .env
-composer.lock
+.admin/composer.lock
 gc
 .admin/auth.json
-.admin/config/Built/basedata.sql
 .admin/public/css/*.min.css
 .admin/public/js/*.min.js
 vendor/*
 error.myproject1.log
+.admin/tmp/db-backup.sql
