--- a/.admin/composer.json
+++ b/.admin/composer.json
@@ -26,8 +26,7 @@
         "propel/propel1": "dev-master",
         "apigoat/phing-copy2": "dev-master",
         "peppeocchi/php-cron-scheduler": "dev-master",
-        "adhocore/env": "^0.1.0",
-        "thingengineer/mysqli-database-class": "dev-master"
+        "adhocore/env": "^0.1.0"
     },
     "repositories": [
         {
