--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,7 @@
 SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
 RewriteEngine on
-RewriteBase /
 
 # Rewrites all URLS without blog in them
   
-  RewriteRule ^(.*)$ /.admin/$1 [L]
+RewriteRule ^(.*)$ .admin/$1 [L]
