--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ MY_PROJECT_ROOT="/var/www/billboy"
 MY_PROJECT_PATH="/var/www/billboy"
 MY_ADMIN_DIR=".admin"
 MY_PROJECT_URL="https://localhost/billboy"
+
+ROOT_USER="apigoat"
+ROOT_PASSWORD="asdPs0e23"
